--- a/intro.ipynb
+++ b/intro.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyj7srZZ48q/JvnhzXYEAa",
+      "authorship_tag": "ABX9TyNMnUgzHB3jbdIP5pQQWS5g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,25 +29,80 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aNPr0C_f4E6n"
+      },
+      "source": [
+        "### Sales"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "C8YlY9twFuJC",
-        "outputId": "c6b290da-1400-456a-fd05-f83849a8e970"
+        "id": "SqS7eHCX30Hd",
+        "outputId": "bc6142d5-7db1-4be6-8bb8-5fc82016d87c"
       },
       "source": [
-        "print(\"Hello World!\")"
+        "revenue = 10000\n",
+        "tax = 0.19\n",
+        "income = revenue * tax\n",
+        "income"
       ],
       "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World!\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1900.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MePBUTad4KIE"
+      },
+      "source": [
+        "### Summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "IvGkEiKp4bLr",
+        "outputId": "34735685-41a7-46de-fe4f-3f24f2b050c5"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np .__version__"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'1.19.5'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -55,35 +110,157 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
-        "id": "nRiGy95wLOAg",
-        "outputId": "6ed235e1-36f5-4fbb-a9ee-ef76ee15c43a"
+        "id": "TQqGofSx5bIZ",
+        "outputId": "95d93aa3-de7e-4cde-d4dc-909116c9bfab"
       },
       "source": [
-        "print(\"Hello colab\")"
+        "!pip install imageai"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello colab\n"
+            "Collecting imageai\n",
+            "  Downloading imageai-2.1.6-py3-none-any.whl (160 kB)\n",
+            "\u001b[K     |████████████████████████████████| 160 kB 5.3 MB/s \n",
+            "\u001b[?25hCollecting keras==2.4.3\n",
+            "  Downloading Keras-2.4.3-py2.py3-none-any.whl (36 kB)\n",
+            "Collecting h5py==2.10.0\n",
+            "  Downloading h5py-2.10.0-cp37-cp37m-manylinux1_x86_64.whl (2.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.9 MB 49.9 MB/s \n",
+            "\u001b[?25hCollecting pillow==7.0.0\n",
+            "  Downloading Pillow-7.0.0-cp37-cp37m-manylinux1_x86_64.whl (2.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1 MB 45.1 MB/s \n",
+            "\u001b[?25hCollecting keras-resnet==0.2.0\n",
+            "  Downloading keras-resnet-0.2.0.tar.gz (9.3 kB)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from imageai) (4.1.2.30)\n",
+            "Collecting matplotlib==3.3.2\n",
+            "  Downloading matplotlib-3.3.2-cp37-cp37m-manylinux1_x86_64.whl (11.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.6 MB 13.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy==1.4.1 in /usr/local/lib/python3.7/dist-packages (from imageai) (1.4.1)\n",
+            "Collecting numpy==1.19.3\n",
+            "  Downloading numpy-1.19.3-cp37-cp37m-manylinux2010_x86_64.whl (14.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 14.9 MB 106 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from h5py==2.10.0->imageai) (1.15.0)\n",
+            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.7/dist-packages (from keras==2.4.3->imageai) (3.13)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (0.10.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.8.2)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.4.7)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (1.3.2)\n",
+            "Requirement already satisfied: certifi>=2020.06.20 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2021.5.30)\n",
+            "Building wheels for collected packages: keras-resnet\n",
+            "  Building wheel for keras-resnet (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for keras-resnet: filename=keras_resnet-0.2.0-py2.py3-none-any.whl size=20486 sha256=8e2bc0eb1a0794b2cc08edd7ece1989bfc57fc4ab0a932261fb8e72154825d12\n",
+            "  Stored in directory: /root/.cache/pip/wheels/bd/ef/06/5d65f696360436c3a423020c4b7fd8c558c09ef264a0e6c575\n",
+            "Successfully built keras-resnet\n",
+            "Installing collected packages: numpy, h5py, pillow, keras, matplotlib, keras-resnet, imageai\n",
+            "  Attempting uninstall: numpy\n",
+            "    Found existing installation: numpy 1.19.5\n",
+            "    Uninstalling numpy-1.19.5:\n",
+            "      Successfully uninstalled numpy-1.19.5\n",
+            "  Attempting uninstall: h5py\n",
+            "    Found existing installation: h5py 3.1.0\n",
+            "    Uninstalling h5py-3.1.0:\n",
+            "      Successfully uninstalled h5py-3.1.0\n",
+            "  Attempting uninstall: pillow\n",
+            "    Found existing installation: Pillow 7.1.2\n",
+            "    Uninstalling Pillow-7.1.2:\n",
+            "      Successfully uninstalled Pillow-7.1.2\n",
+            "  Attempting uninstall: keras\n",
+            "    Found existing installation: keras 2.6.0\n",
+            "    Uninstalling keras-2.6.0:\n",
+            "      Successfully uninstalled keras-2.6.0\n",
+            "  Attempting uninstall: matplotlib\n",
+            "    Found existing installation: matplotlib 3.2.2\n",
+            "    Uninstalling matplotlib-3.2.2:\n",
+            "      Successfully uninstalled matplotlib-3.2.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "tensorflow 2.6.0 requires h5py~=3.1.0, but you have h5py 2.10.0 which is incompatible.\n",
+            "tensorflow 2.6.0 requires keras~=2.6, but you have keras 2.4.3 which is incompatible.\n",
+            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\n",
+            "bokeh 2.3.3 requires pillow>=7.1.0, but you have pillow 7.0.0 which is incompatible.\n",
+            "albumentations 0.1.12 requires imgaug<0.2.7,>=0.2.5, but you have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Successfully installed h5py-2.10.0 imageai-2.1.6 keras-2.4.3 keras-resnet-0.2.0 matplotlib-3.3.2 numpy-1.19.3 pillow-7.0.0\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL",
+                  "matplotlib",
+                  "mpl_toolkits",
+                  "numpy"
+                ]
+              }
+            }
+          },
+          "metadata": {}
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "fM-8WyGZLSCJ"
+        "id": "DqU6qAMp7FrL"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### Markdown"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6EG5ibQ97NSW"
+      },
+      "source": [
+        "Example of *Markdown*  \n",
+        "Example of **Markdown**  \n",
+        "Example of __Markdown__  \n",
+        "Example of 'Markdown'  \n",
+        "\n",
+        "'''\n",
+        "Example of Markdown\n",
+        "'''\n",
+        ">python \n",
+        ">>code\n",
+        "\n",
+        "An ordered list\n",
+        "1. one \n",
+        "2. two\n",
+        "3. three  \n",
+        "\n",
+        "An ordered list\n",
+        "* one\n",
+        "* two\n",
+        "* three\n",
+        "\n",
+        "[Google](https://www.google.com/)  \n",
+        "![Python](https://www.python.org/static/community_logos/python-logo-master-v3-TM-flattened.png)  \n",
+        "\n",
+        "$y = x**2$  \n",
+        "\n",
+        "$\\frac{1}{n} \\sum_{i=1}^{n}x_{i}$  \n",
+        "\n",
+        "$A= \\begin{pmatrix}\n",
+        "a_{1, 1} & a_{1, 2} \\\\\n",
+        "a_{2, 1} & a_{2, 2}\n",
+        "\\end{pmatrix}$\n",
+        "\n",
+        "Cool1 | Cool2 | Cool3\n",
+        "----| ---| ----\n",
+        "Val1| Val2| Val3\n",
+        "Val4| Val5| Val6\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
